# breadcrumbsaddressbar

./: .dockerignore  Dockerfile  LICENSE  README.md  __init__.py  breadcrumbsaddressbar.py  docker_import.py  example.py  filesystem_model.py  layouts.py  model_data.yaml  models_views.py  platform_win.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
breadcrumbsaddressbar/: breadcrumbsaddressbar.py  platform_common.py  stylesheet.py
breadcrumbsaddressbar/backend/: dictionary.py  filesystem.py  interface.py  models.py  yamldict.py
breadcrumbsaddressbar/platform/: windows.py  windows_com.py
src/breadcrumbsaddressbar/: __init__.py  breadcrumbsaddressbar.py  models_views.py  stylesheet.py  views.py
src/breadcrumbsaddressbar/backend/: dictionary.py  filesystem.py  interface.py  models.py
src/breadcrumbsaddressbar/platform/: common.py
tests/: test_dict.py  test_gui.py  test_providers.py
